Replaced email with user UUID in JWT (#14)